2009-09-16  Andrew Jorgensen  <ajorgensen@novell.com>

	* ProcessHelper.cs: libc is in etc/mono/config

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Async.cs: Added. Executes commands on the threadpool
	safely.

	* MonkeyWrench.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.csproj: Updated.

	* Configuration.cs: Added support for SchedulerAccount and
	SchedulerPassword.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Lock.cs: Added customizable locking algorithm.

	* Configuration.cs: Added configuration for LockingAlgorithm.

	* MonkeyWrench.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add support for retrying connections
	to remote server.

2009-06-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* IDB.cs: Added.

	* Makefile:
	* MonkeyWrench.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities: Tweaking the md5 -> path generation once
	more, only create two top level directories and put
	files in there.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: GZUncompress: return a boolean value
	indicating success/failure.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Splitting md5 into 4 character chunks
	gives 2^16 as the max number of subdirectories. Ext2/3
	has a limit of 2^15 number of subdirectories, so split in
	2 character chunks instead.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: PlatformID.Xbox isn't available on
	older monos.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Fix command line argument parsing.

	* FileUtilities.cs: Move md5 code here to make it available
	for all projects.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MimeTypes.cs:
	* FileUtilities.cs:
	* Configuration.cs: Add support for storing files outside
	of the database.
