@@ -48,6 +48,9 @@
     <Compile Include="MimeTypes.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="ProcessHelper.cs" />
+    <Compile Include="ProcessHelperLinux.cs" />
+    <Compile Include="ProcessHelperMac.cs" />
+    <Compile Include="ProcessHelperWindows.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
